--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './markdown.css';
+@import './markdown.scss';
 
 html,
 body,
@@ -29,10 +29,15 @@ html.dark {
 }
 
 .btn {
+  border: none;
   @apply px-4 py-1 rounded inline-block
     bg-teal-600 text-white cursor-pointer
     hover:bg-teal-700
     disabled:cursor-default disabled:bg-gray-600 disabled:opacity-50;
+
+  &.active {
+    @apply bg-teal-900;
+  }
 }
 
 .icon-btn {
